fix overlaps

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -37,6 +37,8 @@
     height: 290px;
     overflow-y: auto;
     resize: vertical;
+    position: relative;
+    z-index: 10;
 }
 
 .playground__editor {
