--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -1,5 +1,6 @@
 .popup {
     position: absolute;
+    z-index: 5;
     left: 5rem;
     top: 15rem;
     font-family: var(--mono-font);
